bases/datawarehouse/airbyte/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbyte
  namespace: datawarehouse
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: airbyte
  namespace: datawarehouse
subsets:
  - addresses:
      - ip: 10.31.131.4
    ports:
      - port: 8000
