bases/datawarehouse/airbyte/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte.${cluster_name}.${cluster_location}.bink.sh
  namespace: datawarehouse
spec:
  ingressClassName: traefik
  rules:
    - host: airbyte.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airbyte
                port:
                  number: 8000
  tls:
    - hosts:
        - airbyte.${cluster_name}.${cluster_location}.bink.sh
